PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/Brookfield_Opportunity__c.object-meta.xml
<CustomObject>
    <description>To see all Opportunities in the Org</description>
    <label>Other Brookfield Opportunity</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Other Brookfield Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Brookfield Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>