PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/fields/Account_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_text__c</fullName>
    <description>to help search</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>to help search</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>