PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>pull the amount of the Opportunity</description>
    <formula>Opportunity__r.Amount</formula>
    <inlineHelpText>pull the amount of the Opportunity</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>