PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>to pull Opportunity Probability</description>
    <formula>Opportunity__r.Probability</formula>
    <inlineHelpText>to pull Opportunity Probability</inlineHelpText>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>