PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>to pull the stage of the Opportunity</description>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <inlineHelpText>to pull the stage of the Opportunity</inlineHelpText>
    <label>Stage</label>
    <type>Text</type>
</CustomField>