PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/recordTypes/PFG.recordType-meta.xml
<RecordType>
    <fullName>PFG</fullName>
    <active>true</active>
    <label>PFG</label>
</RecordType>