PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/listViews/PFG_Opportunities.listView-meta.xml
<ListView>
    <fullName>PFG_Opportunities</fullName>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Brookfield_Owner__c</columns>
    <columns>Amount__c</columns>
    <columns>Stage__c</columns>
    <columns>Probability__c</columns>
    <columns>Last_Opportunity_Update__c</columns>
    <columns>Last_Activity__c</columns>
    <columns>Won__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>contains</operation>
        <value>PFG</value>
    </filters>
    <label>PFG Opportunities</label>
</ListView>