PROD-9-26-19/force-app/main/default/objects/Brookfield_Opportunity__c/listViews/Stage_1_and_2.listView-meta.xml
<ListView>
    <fullName>Stage_1_and_2</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account_Name_text__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>startsWith</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>startsWith</operation>
        <value>2</value>
    </filters>
    <label>Stage 1 and 2</label>
</ListView>